<resources>
    <string name="app_name">Shoe Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="with_no_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign_up_now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="app_slogan">Comfort is everyThing</string>
    <string name="app_slogan2">Comfort is \neveryThing</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">User Name</string>
    <string name="already_have_account">Already have account?</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="Cancel">Cancel</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_color">Shoe Color</string>
    <string name="shoe_brand">Shoe Brand</string>
    <string name="shoe_Company">Shoe Company</string>
    <string name="description">Description</string>
    <string name="lets_start">Lets Start</string>
    <string name="slogan2">Fined the best shoes for comfort \nin your daily activities</string>
    <string name="instruction1">you can add new shoe via pressing Add Button</string>
    <string name="instruction2">then you mast fill all data of a new shoe and press save button</string>
    <string name="get_started">Get Started</string>
    <string name="save">Save</string>
    <string name="sshoe_description">Shoe Description</string>
</resources>