<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_logo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/label_style"
        android:layout_marginTop="36dp"
        android:text="@string/shoe_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/nameId"
        style="@style/Edit_Text_style"
        android:layout_marginStart="40dp"
        android:hint="@string/shoe_name"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
       style="@style/label_style"
        android:layout_marginTop="10dp"
        android:text="@string/shoe_brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameId" />


    <TextView
        android:id="@+id/textView8"
     style="@style/label_style"
        android:text="@string/sshoe_description"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandId" />

    <EditText
        android:id="@+id/descriptionId"
        style="@style/Edit_Text_style"
        android:hint="@string/description"
        android:textCursorDrawable="@null"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <TextView
        android:id="@+id/textView9"
       style="@style/label_style"
        android:layout_marginTop="10dp"
        android:text="@string/shoe_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionId" />

    <EditText
        android:id="@+id/sizeId"
        style="@style/Edit_Text_style"
        android:hint="@string/shoe_size"
        android:textCursorDrawable="@null"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/brandId"
        style="@style/Edit_Text_style"
        android:hint="@string/shoe_Company"
        android:textCursorDrawable="@null"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/saveButtonId"
        style="@style/Button_style"
        android:layout_width="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeId" />

    <Button
        android:id="@+id/cancelButtonId"
        style="@style/Button_style"

        android:layout_width="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/Cancel"
        app:backgroundTint="@null"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeId" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Logo_style"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/add_new_shoe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
