<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <EditText
            android:id="@+id/editTextLogin"
            style="@style/Edit_Text_style"
            android:layout_marginTop="16dp"
            android:hint="@string/mail"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView

            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_mail"
            android:layout_marginStart="-10dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextLogin"
            app:layout_constraintStart_toStartOf="@+id/editTextLogin"
            app:layout_constraintTop_toTopOf="@+id/editTextLogin"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/Edit_Text_style"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

        <ImageView

            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_pass"
            android:layout_marginStart="-10dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toTopOf="@+id/editTextPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/logInButtonId"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            app:backgroundTint="@null"
            style="@style/Button_style"
            android:text="@string/login"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textView"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/with_no_account"
            style="@style/Text_View_style1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInButtonId" />

        <TextView
            android:id="@+id/signUpButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up_now"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:textSize="17sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInButtonId" />

        <TextView
            android:id="@+id/forgotPassId"
            android:layout_marginTop="88dp"
            android:text="@string/forgot_password"
            style="@style/Text_View_style2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInButtonId" />


        <TextView
            android:id="@+id/textView2"
            style="@style/Logo_style"
            android:gravity="center"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageId" />

        <TextView
            android:id="@+id/textView3"
            android:text="@string/app_slogan"
            style="@style/slogan_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/logoImageId"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_logo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
